Update an UI for Detail Page V1

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -22,4 +22,19 @@
         android:name="com.example.travelmate.presentation.feature.profile.ProfileFragment"
         android:label="@string/title_profile"
         tools:layout="@layout/fragment_profile" />
+    <activity
+        android:id="@+id/loginActivity"
+        android:name="com.example.travelmate.presentation.feature.login.LoginActivity"
+        android:label="activity_login"
+        tools:layout="@layout/activity_login" />
+    <activity
+        android:id="@+id/categoryActivity"
+        android:name="com.example.travelmate.presentation.feature.category.CategoryActivity"
+        android:label="activity_category"
+        tools:layout="@layout/activity_category" />
+    <activity
+        android:id="@+id/detailActivity"
+        android:name="com.example.travelmate.presentation.feature.travel.detail.DetailActivity"
+        android:label="activity_detail"
+        tools:layout="@layout/activity_detail" />
 </navigation>
