--- a/app/src/main/res/layout/fragment_travel.xml
+++ b/app/src/main/res/layout/fragment_travel.xml
@@ -6,38 +6,20 @@
     android:layout_height="match_parent"
     tools:context=".presentation.feature.travel.TravelFragment">
 
-    <com.google.android.material.search.SearchBar
-        android:id="@+id/searchBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="16dp" />
-
-    <com.google.android.material.search.SearchView
-        android:id="@+id/searchView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar">
-
-    </com.google.android.material.search.SearchView>
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_destination"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar"
+        android:layout_height="match_parent"
         tools:listitem="@layout/item_destination" />
 
     <com.facebook.shimmer.ShimmerFrameLayout
         android:id="@+id/shimmer_destination"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/searchBar"
         tools:visibility="visible">
 
         <include layout="@layout/item_shimmer" />
+
     </com.facebook.shimmer.ShimmerFrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
