--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         app:layout_constraintTop_toTopOf="parent"
+        app:menu="@menu/top_bar_menu"
         app:popupTheme="@style/ThemeOverlay.Material3"
         app:titleTextColor="@color/white" />
 
