--- a/app/src/main/res/layout/custom_dialog.xml
+++ b/app/src/main/res/layout/custom_dialog.xml
@@ -15,6 +15,17 @@
         android:layout_height="match_parent"
         android:padding="24dp">
 
+
+        <TextView
+            android:id="@+id/text_title"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:text="Itinerary" />
+
         <ImageButton
             android:id="@+id/btn_cancel"
             android:layout_width="32dp"
@@ -23,43 +34,34 @@
             android:scaleType="centerInside"
             android:src="@drawable/outline_cancel_24"
             android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="@+id/text_title"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/text_title"
             tools:visibility="visible" />
-
-        <ImageView
-            android:id="@+id/imgIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:src="@drawable/baseline_date_range_24"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btn_cancel" />
 
         <EditText
             android:id="@+id/edtDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:drawableLeft="@drawable/baseline_date_range_24"
+            android:drawablePadding="8dp"
             android:focusable="false"
             android:hint="Set Date"
-            app:layout_constraintEnd_toEndOf="@+id/imgIcon"
-            app:layout_constraintStart_toStartOf="@+id/imgIcon"
-            app:layout_constraintTop_toBottomOf="@+id/imgIcon" />
+            app:layout_constraintStart_toStartOf="@+id/text_title"
+            app:layout_constraintTop_toBottomOf="@id/text_title" />
 
         <EditText
             android:id="@+id/edtNotes"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:drawableStart="@drawable/outline_sticky_note_2_24"
+            android:drawableLeft="@drawable/outline_sticky_note_2_24"
             android:drawablePadding="8dp"
             android:hint="Notes"
             android:inputType="textMultiLine"
             android:lines="4"
             android:maxLines="4"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/edtDate" />
 
         <com.google.android.material.button.MaterialButton
