--- a/app/src/main/res/layout/fragment_itinerary.xml
+++ b/app/src/main/res/layout/fragment_itinerary.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.feature.itinerary.ItineraryFragment">
+    tools:context=".presentation.feature.itinerary.view.fragment.ItineraryFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_itinerary"
