--- a/app/src/main/res/layout/item_itinerary.xml
+++ b/app/src/main/res/layout/item_itinerary.xml
@@ -62,16 +62,18 @@
         app:layout_constraintTop_toBottomOf="@id/tv_date"
         tools:text="Magelang, Central Java" />
 
-    <TextView
-        android:id="@+id/tv_notes"
+    <CheckBox
+        android:id="@+id/tv_note"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginHorizontal="8dp"
+        android:button="@drawable/outline_sticky_note_2_24"
+        android:clickable="false"
         android:ellipsize="end"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toBottomOf="@+id/materialCardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/materialCardView"
-        app:layout_constraintTop_toBottomOf="@id/tv_location"
+        android:gravity="top"
+        android:maxLines="4"
+        app:layout_constraintBottom_toBottomOf="@id/materialCardView"
+        app:layout_constraintEnd_toEndOf="@+id/tv_location"
+        app:layout_constraintStart_toStartOf="@+id/tv_location"
+        app:layout_constraintTop_toBottomOf="@+id/tv_location"
         tools:text="@tools:sample/lorem/random" />
 </androidx.constraintlayout.widget.ConstraintLayout>
