--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -56,7 +56,8 @@
                 android:id="@+id/checkBox_beach"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Beach"
+                android:checked="true"
+                android:text="@string/text_beach"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
                 app:layout_constraintTop_toBottomOf="@id/imageView_travel_plans" />
@@ -65,7 +66,8 @@
                 android:id="@+id/checkBox_mountain"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Mountain"
+                android:checked="true"
+                android:text="@string/text_mountain"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
                 app:layout_constraintTop_toBottomOf="@id/checkBox_beach" />
@@ -74,7 +76,8 @@
                 android:id="@+id/checkBox_cultural"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Cultural"
+                android:checked="true"
+                android:text="@string/text_cultural"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
                 app:layout_constraintTop_toBottomOf="@id/checkBox_mountain" />
@@ -83,7 +86,8 @@
                 android:id="@+id/checkBox_culinary"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Culinary"
+                android:checked="true"
+                android:text="@string/text_culinary"
                 android:textSize="16sp"
                 app:layout_constraintStart_toStartOf="@+id/textView_2"
                 app:layout_constraintTop_toBottomOf="@id/checkBox_cultural" />
@@ -95,7 +99,7 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginTop="32dp"
                 android:layout_marginBottom="16dp"
-                android:text="Start journey"
+                android:text="@string/text_start_journey"
                 app:cornerRadius="8dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/checkBox_culinary" />
