--- a/app/src/main/res/layout/item_destination.xml
+++ b/app/src/main/res/layout/item_destination.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="16dp"
-    android:layout_marginTop="16dp">
+    android:layout_marginVertical="16dp">
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
