--- a/app/src/main/res/menu/top_bar_menu.xml
+++ b/app/src/main/res/menu/top_bar_menu.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/menu_search"
         android:icon="@drawable/baseline_search_24"
-        android:title="Search"
+        android:title="@string/text_search"
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|ifRoom" />
 </menu>
