--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.feature.travel.detail.DetailActivity">
+    tools:context=".presentation.feature.travel.view.activity.DetailActivity">
 
     <ScrollView
         android:layout_width="match_parent"
